--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,6 +6,13 @@ $color-default-white:               #ffffff;
 $color-transparent:                 rgba(255, 255, 255, 0);
 $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
+$color-cornflower-blue:             #5f9cf8;
+$color-cornflower-blue-2:           #5a7fff;
+$color-snow:                        #fcfcfc;
+$color-bittersweet:                 #ff5a5a;
+$color-pink-swan:                   #beb5b5;
+$color-pink-swan:                   #beb5b5;
+$color-nobel:                       #979797;
 
 // Typography
 // ---------------------------------
